[package]
name = "topo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.4", features = ["svg", "pdf", "png"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
xml_dom = "0.2.6"
