[package]
name = "topo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
cairo-rs = { version = "0.19.4", features = ["svg", "pdf", "png"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
memmap = "0.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
xml_dom = "0.2.6"
